@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-10-27T01:53:30Z",
+  "timestamp" : "2022-10-27T08:25:38Z",
   "count_outdated" : 2521,
   "uniques_outdated" : 655,
   "count" : 2586,
-  "uniques" : 693,
+  "uniques" : 694,
   "clones" : [
     {
       "timestamp": "2022-10-13T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-10-26T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-10-27T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
