@@ -1,3 +1,11 @@
+2022-10-27T08:25:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3335740871 # 973
+* notice: last 14d: unq all: 22 65
+* notice: prev accum: outdated-unq outdated-all / unq all: 655 2521 / 693 2586
+* notice: next accum: outdated-unq outdated-all / unq all: 655 2521 / 694 2586
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-10-13 2022-10-27]
+
 2022-10-27T01:53:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3333906543 # 972
 * notice: last 14d: unq all: 22 65
